--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
 				
 			</main>
 			<footer>
-				<h4>Character Sheet.</h4>
+				<h4>Character Sheet. 5e.</h4>
 				<ul>
 					<li><button type="button" class="btn-plain btn-help">Help</button></li>
 					<li>Created by <a href="http://madinkbeard.com">Derik A Badman</a></li>
