update github footer link

--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
 				<ul>
 					<li><button type="button" class="btn-plain btn-help">Help</button></li>
 					<li>Created by <a href="http://madinkbeard.com">Derik A Badman</a></li>
-					<li><a href="https://github.com/derikb/">Github</a></li>
+					<li><a href="https://github.com/derikb/character-sheet-5e">Github</a></li>
 				</ul>
 			</footer>
 		</div>
