unsaved warning fixes #3

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<link rel="stylesheet" href="styles.css">
 	</head>
 	<body>
-		
+		<div class="alert-unsaved dialog">Unsaved changes...</div>
 		<div class="alert-main dialog"></div>
 		
 		<div class="container">
