--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" manifest="site.manifest">
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -11,6 +11,22 @@
 		
 <!-- 		<link rel="manifest" href="manifest.json"> -->				
 		<link rel="stylesheet" href="styles.css">
+		
+		<script type="text/javascript">
+ 
+  function logEvent(event) {
+      console.log(event.type);
+  }
+ 
+  window.applicationCache.addEventListener('checking',logEvent,false);
+  window.applicationCache.addEventListener('noupdate',logEvent,false);
+  window.applicationCache.addEventListener('downloading',logEvent,false);
+  window.applicationCache.addEventListener('cached',logEvent,false);
+  window.applicationCache.addEventListener('updateready',logEvent,false);
+  window.applicationCache.addEventListener('obsolete',logEvent,false);
+  window.applicationCache.addEventListener('error',logEvent,false);
+ 
+  </script>
 	</head>
 	<body>
 		<div class="alert-unsaved dialog">Unsaved changes...</div>
