finish up docs fixes #12

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
 			<ul>
 				<li>This app only saves data to your browsers' local storage. If your browser's data is deleted, your saved characters will be deleted. Use the backup options to save character data when you make changes.</li>
 				<li>This app is designed for modern web browsers, it has been tested in Chrome (desktop and mobile), Firefox (desktop), and Safari (desktop and mobile). It is possible this will work in IE Edge too, I haven't tested it (if you try it send me any bugs).</li>
-				<li>After you've loaded the app, it will work offline in Chrome and Firefox (except on iOS because Apple doesn't support that yet).</li>
+				<li>After you've loaded the app, it will work offline in Chrome, Firefox, and Safari (desktop) as well as Safari (iOS) and Chrome (Android). Chrome (iOS) does not seem to work offline, and I haven't tried any other browsers.</li>
 			</ul>
 
 			<h2>Actions</h2>
