prof tied to level fixes #9

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 						<dt>Experience</dt><dd contenteditable="true" data-name="experience"></dd>
 					</div>
 					<div>
-						<dt>Proficiency Bonus</dt><dd contenteditable="true" class="small" data-name="proficiency"></dd>
+						<dt>Proficiency Bonus</dt><dd class="small" data-name="proficiency"></dd>
 						<dt>Inspiration</dt><dd contenteditable="true" class="small" data-name="inspiration"></dd>
 					</div>
 					<div>
