--- a/index.html
+++ b/index.html
@@ -9,9 +9,16 @@
 		<meta name="application-name" content="Character Sheet. 5e.">
 		<meta name="description" content="Online character sheet for 5e D&amp;D.">
 		
-<!-- 		<link rel="manifest" href="manifest.json"> -->				
-		<link rel="stylesheet" href="styles.css">
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
+		<link rel="manifest" href="/manifest.json">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6e6e6e">
+		<meta name="apple-mobile-web-app-title" content="CharSheet5e">
+		<meta name="application-name" content="CharSheet5e">
+		<meta name="theme-color" content="#ffffff">
 		
+		<link rel="stylesheet" href="styles.css">		
 	</head>
 	<body>
 		<div class="alert-unsaved dialog">Unsaved changes...</div>
