--- a/index.html
+++ b/index.html
@@ -8,14 +8,13 @@
 		<title>Character Sheet. 5e.</title>
 		<meta name="application-name" content="Character Sheet. 5e.">
 		<meta name="description" content="Online character sheet for 5e D&amp;D.">
-		
+				
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
 		<link rel="icon" type="image/png" href="/favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="/favicon-16x16.png" sizes="16x16">
 		<link rel="manifest" href="/manifest.json">
-		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#6e6e6e">
+		<link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
 		<meta name="apple-mobile-web-app-title" content="CharSheet5e">
-		<meta name="application-name" content="CharSheet5e">
 		<meta name="theme-color" content="#ffffff">
 		
 		<link rel="stylesheet" href="styles.css">		
