--- a/index.html
+++ b/index.html
@@ -313,8 +313,10 @@
 						<div contenteditable="true" class="smallarea" data-name="bonds"></div>
 						<h3>Flaws</h3>
 						<div contenteditable="true" class="smallarea" data-name="flaws"></div>
+						<h3>Appearance</h3>
+						<div contenteditable="true" class="smallarea" data-name="appearance"></div>
 						<h2>Languages</h2>
-						<div contenteditable="true" class="largearea" data-name="languages"></div>
+						<div contenteditable="true" class="smallarea" data-name="languages"></div>
 					</div>
 					
 <!--
