spell list hideshow fixes #6

--- a/index.html
+++ b/index.html
@@ -397,39 +397,39 @@
 						<h3>Cantrips</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="0"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>1st</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="1"></div>
 					</div>
-					<div class="field-column-33">	
+					<div class="field-column-33 hidden">	
 						<h3>2nd</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="2"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>3rd</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="3"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>4th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="4"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>5th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="5"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>6th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="6"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>7th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="7"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>8th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="8"></div>
 					</div>
-					<div class="field-column-33">
+					<div class="field-column-33 hidden">
 						<h3>9th</h3>
 						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="9"></div>
 					</div>
