spell list changes fixes #29

--- a/index.html
+++ b/index.html
@@ -390,43 +390,43 @@
 				<div class="field-row wrap">
 					<div class="field-column-33">
 						<h3>Cantrips</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="0"></div>
+						<ul data-name="spells" data-subfield="0"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>1st</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="1"></div>
+						<ul data-name="spells" data-subfield="1"></ul>
 					</div>
 					<div class="field-column-33 hidden">	
 						<h3>2nd</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="2"></div>
+						<ul data-name="spells" data-subfield="2"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>3rd</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="3"></div>
+						<ul data-name="spells" data-subfield="3"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>4th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="4"></div>
+						<ul data-name="spells" data-subfield="4"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>5th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="5"></div>
+						<ul data-name="spells" data-subfield="5"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>6th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="6"></div>
+						<ul data-name="spells" data-subfield="6"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>7th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="7"></div>
+						<ul data-name="spells" data-subfield="7"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>8th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="8"></div>
+						<ul data-name="spells" data-subfield="8"></ul>
 					</div>
 					<div class="field-column-33 hidden">
 						<h3>9th</h3>
-						<div contenteditable="true" class="largearea" data-name="spells" data-subfield="9"></div>
+						<ul data-name="spells" data-subfield="9"></ul>
 					</div>
 				</div>
 				
@@ -473,6 +473,8 @@
 				<li>Click on data or empty areas to edit. Data is NOT automatically saved; you must hit the <strong>Save</strong> button.</li>
 				<li>Ability, saving throw, and skill modifiers are all automatically calculated when the proficiency, ability, save, or skill fields are changed.</li>
 				<li>All other fields are manually changed.</li>
+				<li>Spell lists only appear if the corresponding spell slot is greater than 0.</li>
+				<li>Press <em>enter</em> while editing a spell field to add another empty field to the list.</li>
 			</ul>
 			
 			<button type="button" class="close">Close</button>
