shield bg for ac #18

--- a/index.html
+++ b/index.html
@@ -72,15 +72,28 @@
 					</div>
 					<div>
 						<dt>Level</dt><dd contenteditable="true" class="small" data-name="level"></dd>
-						<dt>Experience</dt><dd contenteditable="true" data-name="experience"></dd>
+					</div>
+					<div>
+						<dt>Experience</dt><dd contenteditable="true" class="small" data-name="experience"></dd>
 					</div>
 					<div>
 						<dt>Proficiency Bonus</dt><dd class="small" data-name="proficiency"></dd>
+					</div>
+					<div>
 						<dt>Inspiration</dt><dd contenteditable="true" class="small" data-name="inspiration"></dd>
 					</div>
 					<div>
-						<dt>Armor Class</dt><dd contenteditable="true" class="small" data-name="armor_class" placeholder="10"></dd>
 						<dt>Speed</dt><dd contenteditable="true" class="small" data-name="speed"></dd>
+					</div>
+					<div>
+						<dt>Hit Dice</dt>
+						<dd>
+							<span contenteditable="true" class="small" data-name="hd_cur" placeholder="1"></span> <strong>/</strong> 
+							<span contenteditable="true" class="small" data-name="hd_max" placeholder="1"></span>
+						</dd>
+					</div>	
+					<div>
+						<dt>Armor Class</dt><dd contenteditable="true" class="small" data-name="armor_class" placeholder="10"></dd>
 					</div>
 					<div>
 						<dt>Hit Points</dt>
@@ -89,13 +102,7 @@
 							<span contenteditable="true" class="small" data-name="hp_max" placeholder="0"></span>
 						</dd>
 					</div>
-					<div>
-						<dt>Hit Dice</dt>
-						<dd>
-							<span contenteditable="true" class="small" data-name="hd_cur" placeholder="1"></span> <strong>/</strong> 
-							<span contenteditable="true" class="small" data-name="hd_max" placeholder="1"></span>
-						</dd>
-					</div>					
+									
 				</dl>
 
 				<div class="field-row">
