hp icons fixes #18

--- a/index.html
+++ b/index.html
@@ -91,11 +91,11 @@
 							<span contenteditable="true" class="small" data-name="hd_cur" placeholder="1"></span> <strong>/</strong> 
 							<span contenteditable="true" class="small" data-name="hd_max" placeholder="1"></span>
 						</dd>
-					</div>	
-					<div>
+					</div>
+					<div class="with_icon">
 						<dt>Armor Class</dt><dd contenteditable="true" class="small" data-name="armor_class" placeholder="10"></dd>
 					</div>
-					<div>
+					<div class="with_icon">
 						<dt>Hit Points</dt>
 						<dd>
 							<span contenteditable="true" class="small" data-name="hp_cur" placeholder="0"></span> <strong>/</strong> 
