extra fix for #40

--- a/index.html
+++ b/index.html
@@ -428,11 +428,11 @@
 				
 				<div class="field-row">
 					<div class="field-column-33">
-						<h2 id="page-notes">Adventure Notes</h2>
+						<h2 id="page-notes_adv">Adventure Notes</h2>
 						<div contenteditable="true" class="largearea" data-name="notes_adv"></div>
 					</div>
 					<div class="field-column-33">
-						<h2 id="page-notes">Campaign Notes</h2>
+						<h2>Campaign Notes</h2>
 						<div contenteditable="true" class="largearea" data-name="notes_cam"></div>
 					</div>
 				</div>
@@ -451,8 +451,8 @@
 					<li><a href="#page-top">Top</a></li>
 					<li><a href="#page-attributes">Attributes</a></li>
 					<li><a href="#page-skills">Skills</a></li>
-					<li><a href="#page-notes">Notes</a></li>
 					<li><a href="#page-spells">Spells</a></li>
+					<li><a href="#page-notes_adv">Notes</a></li>
 				</ol>
 			</nav>
 		</div>
