add spell slot current/max #41

--- a/index.html
+++ b/index.html
@@ -369,23 +369,68 @@
 
                 <dl class="field">
                     <div>
-                        <dt>1st</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="1"></dd>
-                        <dt>2nd</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="2"></dd>
+                        <dt>1st</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="1" aria-label="Current spell slots: Level 1" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="1" aria-label="Max spell slots: Level 1" min="0" value="0" />
+                        </dd>
+                        <dt>2nd</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="2" aria-label="Current spell slots: Level 2" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="2" aria-label="Max spell slots: Level 2" min="0" value="0" />
+                        </dd>
                     </div>
                     <div>
-                        <dt>3rd</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="3"></dd>
-                        <dt>4th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="4"></dd>
+                        <dt>3rd</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="3" aria-label="Current spell slots: Level 3" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="3" aria-label="Max spell slots: Level 3" min="0" value="0" />
+                        </dd>
+                        <dt>4th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="4" aria-label="Current spell slots: Level 4" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="4" aria-label="Max spell slots: Level 4" min="0" value="0" />
+                        </dd>
                     </div>
                     <div>
-                        <dt>5th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="5"></dd>
-                        <dt>6th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="6"></dd>
+                        <dt>5th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="5" aria-label="Current spell slots: Level 5" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="5" aria-label="Max spell slots: Level 5" min="0" value="0" />
+                        </dd>
+                        <dt>6th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="6" aria-label="Current spell slots: Level 6" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="6" aria-label="Max spell slots: Level 6" min="0" value="0" />
+                        </dd>
                     </div>
                     <div>
-                        <dt>7th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="7"></dd>
-                        <dt>8th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="8"></dd>
+                        <dt>7th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="7" aria-label="Current spell slots: Level 7" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="7" aria-label="Max spell slots: Level 7" min="0" value="0" />
+                        </dd>
+                        <dt>8th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="8" aria-label="Current spell slots: Level 8" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="8" aria-label="Max spell slots: Level 8" min="0" value="0" />
+                        </dd>
                     </div>
                     <div>
-                        <dt>9th</dt><dd contenteditable="true" data-name="spell_slots" data-subfield="9"></dd>
+                        <dt>9th</dt>
+                        <dd>
+                            <input type="number" class="small" data-name="spell_slots_cur" data-subfield="9" aria-label="Current spell slots: Level 9" min="0" />
+                            <strong>/</strong>
+                            <input type="number" class="small" data-name="spell_slots" data-subfield="9" aria-label="Max spell slots: Level 9" min="0" value="0" />
+                        </dd>
                     </div>
                 </dl>
 
