feat(ui): Add keyboard shortcuts for save/tabs
Closes #43

--- a/index.html
+++ b/index.html
@@ -548,12 +548,21 @@
             <h2>Character Sheet</h2>
 
             <ul>
-                <li>Click on data or empty areas to edit. Data is NOT automatically saved; you must hit the <strong>Save</strong> button.</li>
+                <li>Click on data or empty areas to edit. Data is NOT automatically saved; you must hit the <strong>Save</strong> button (or use the keyboard shortcut).</li>
                 <li>Ability, saving throw, and skill modifiers are all automatically calculated when the proficiency, ability, save, or skill fields are changed.</li>
                 <li>All other fields are manually changed.</li>
                 <li>Spell lists only appear if the corresponding spell slot is greater than 0.</li>
-                <li>Press <em>enter</em> while editing a spell field to add another empty field to the list.</li>
+                <li>Press <em>enter</em> while editing any list field to add another empty field to the list. (Use <em>Shift+Enter</em> to add a new line.)</li>
             </ul>
+
+            <h2>Keyboard Shortcuts</h2>
+            <table>
+                <thead><tr><th>Keys</th><th>Action</th></tr></thead>
+                <tbody>
+                    <tr><td><em>Ctrl+Shift+S</em></td><td>Save current character</td></tr>
+                    <tr><td><em>Ctrl+Shift+T</em></td><td>Switch Tabs</td></tr>
+                </tbody>
+            </table>
 
             <button type="button" class="close">Close</button>
         </div>
